Code I forgot to commit
Fix for linux natives issue
Fix (hopefully) for object heap initialization issue
Probably some other stuff I can't be bothered to remember